# ddnet-rs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md
game/api-editor/: Cargo.toml
game/api-editor/src/: lib.rs
game/api-render-game/: Cargo.toml
game/api-render-game/src/: lib.rs
game/api-state/: Cargo.toml
game/api-state/src/: lib.rs
game/assets-base/: Cargo.toml
game/assets-base/src/: lib.rs  loader.rs  tar.rs  verify.rs
game/assets-base/src/verify/: json.rs  ogg_vorbis.rs  txt.rs
game/assets-splitting/: Cargo.toml
game/assets-splitting/src/: ddrace_hud_split.rs  emoticon_split.rs  extra_split.rs  game_split.rs  lib.rs  particles_split.rs  skin_split.rs
game/binds/: Cargo.toml
game/binds/src/: binds.rs
game/client-accounts/: Cargo.toml
game/client-accounts/src/: accounts.rs
game/client-console/: Cargo.toml
game/client-console/src/console/: console.rs  local_console.rs  remote_console.rs
game/client-containers/: Cargo.toml
game/client-containers/src/: container.rs  ctf.rs  emoticons.rs  entities.rs  flags.rs  freezes.rs  game.rs  hooks.rs  hud.rs  ninja.rs  particles.rs  skins.rs  utils.rs  weapons.rs
game/client-demo/: Cargo.toml
game/client-demo/src/: lib.rs
game/client-ghost/: Cargo.toml
game/client-ghost/src/: lib.rs
game/client-map/: Cargo.toml
game/client-map/src/: client_map.rs
game/client-notifications/: Cargo.toml
game/client-notifications/src/: overlay.rs
game/client-render/: Cargo.toml
game/client-render-base/: Cargo.toml
game/client-render-base/src/map/: map.rs  map_buffered.rs  map_pipeline.rs  map_sound.rs  map_with_visual.rs  render_map_base.rs  render_pipe.rs  render_tools.rs
game/client-render-base/src/map/map_buffered/: graphic_border_tile.rs  graphic_tile.rs
game/client-render-base/src/render/: canvas_mapping.rs  default_anim.rs  effects.rs  particle_manager.rs  tee.rs  toolkit.rs
game/client-render-game/: Cargo.toml
game/client-render-game/src/: render_game.rs
game/client-render-game/src/components/: cursor.rs  game_objects.rs  hud.rs  players.rs
game/client-render/src/actionfeed/: render.rs
game/client-render/src/chat/: render.rs
game/client-render/src/emoticons/: render.rs
game/client-render/src/hud/: page.rs
game/client-render/src/nameplates/: render.rs
game/client-render/src/spectator_selection/: page.rs
game/client-replay/: Cargo.toml
game/client-replay/src/: replay.rs
game/client-types/: Cargo.toml
game/client-types/src/: cert.rs  chat.rs  console.rs  lib.rs
game/client-ui/: Cargo.toml
game/client-ui/src/: events.rs  sort.rs  thumbnail_container.rs  utils.rs
game/client-ui/src/actionfeed/: feed_list.rs  kill_entry.rs  main_frame.rs  race_finish_entry.rs  shared.rs
game/client-ui/src/chat/: chat_entry.rs  chat_list.rs  input.rs  main_frame.rs  shared.rs  system_entry.rs  user_data.rs
game/client-ui/src/connect/: main_frame.rs  page.rs  user_data.rs
game/client-ui/src/console/: console_list.rs  input.rs  input_err.rs  main_frame.rs  suggestions.rs  utils.rs
game/client-ui/src/demo_player/: main_frame.rs
game/client-ui/src/emote_wheel/: main_frame.rs
game/client-ui/src/hud/: main_frame.rs  user_data.rs
game/client-ui/src/ingame_menu/: account_info.rs  client_info.rs  main_frame.rs  page.rs  raw_input_info.rs  server_info.rs  server_players.rs  votes.rs
game/client-ui/src/ingame_menu/account/: main_frame.rs
game/client-ui/src/ingame_menu/call_vote/: main_frame.rs  map.rs  misc.rs  mod.rs  players.rs
game/client-ui/src/ingame_menu/game/: main_frame.rs
game/client-ui/src/ingame_menu/server_info/: main_frame.rs
game/client-ui/src/ingame_menu/server_players/: main_frame.rs
game/client-ui/src/ingame_menu/topbar/: main_frame.rs
game/client-ui/src/main_menu/: communities.rs  ddnet_info.rs  legacy_server_list.rs  main_frame.rs  mod.rs  monitors.rs  page.rs  player_settings_ntfy.rs  spatial_chat.rs  user_data.rs
game/client-ui/src/main_menu/communities/: list.rs  main_frame.rs
game/client-ui/src/main_menu/demo/: list.rs  (+1 more)
game/client-ui/src/motd/: main_frame.rs
game/client-ui/src/scoreboard/: main_frame.rs
game/client-ui/src/spectator_selection/: main_frame.rs  user_data.rs
game/client-ui/src/vote/: main_frame.rs
game/ddnet-info-proxy/: Cargo.toml
game/ddnet-info-proxy/src/: lib.rs
game/demo/: Cargo.toml
game/demo/src/: lib.rs  recorder.rs
game/editor/: Cargo.toml
game/editor-auto-mapper-wasm/: Cargo.toml
game/editor-auto-mapper-wasm/src/: lib.rs  manager.rs  wasm.rs
game/editor-wasm/: Cargo.toml
game/editor-wasm/src/editor/: editor_lib.rs  editor_wasm.rs  editor_wasm_manager.rs
game/editor/src/: action_logic.rs  client.rs  editor.rs  editor_ui.rs  event.rs  explain.rs  fs.rs  hotkeys.rs  image_store_container.rs  lib.rs  map.rs  map_tools.rs  network.rs  notifications.rs  options.rs  physics_layers.rs  server.rs  sound_store_container.rs  tab.rs  tile_overlays.rs  utils.rs
game/editor/src/actions/: actions.rs  utils.rs
game/editor/src/dbg/: invalid.rs  valid.rs
game/editor/src/tools/: auto_saver.rs  mod.rs  shared.rs  tool.rs  utils.rs
game/editor/src/ui/: close_modal.rs  dotted_rect.rs  main_frame.rs  mod.rs  page.rs  user_data.rs  utils.rs
game/game-base/: Cargo.toml
game/game-base/src/: browser_favorite_player.rs  config_helper.rs  connecting_log.rs  datafile.rs  indexmap_tests.rs  lib.rs  local_server_info.rs  mapdef_06.rs  server_browser.rs  types.rs
game/game-base/src/network/: messages.rs
game/game-config/: Cargo.toml
game/game-config/src/: config.rs
game/game-interface/: Cargo.toml
game/game-interface/src/: events.rs  interface.rs  lib.rs  rcon_entries.rs  votes.rs
game/game-interface/src/types/: game.rs  id_gen.rs  input.rs  resource_key.rs  snapshot.rs
game/game-network/: Cargo.toml
game/game-network/src/: game_event_generator.rs  messages.rs
game/game-server/: Cargo.toml
game/game-server/src/: auto_map_votes.rs  client.rs  local_server.rs  map_votes.rs  rcon.rs  server.rs  server_game.rs  spatial_chat.rs
game/game-server/src/network_plugins/: accounts_only.rs  cert_ban.rs
(+569 files in other folders)
