[package]
name = "api-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
editor = { path = "../editor" }

api = { path = "../../lib/api" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
config = { path = "../../lib/config" }
graphics-types = { path = "../../lib/graphics-types" }

egui = { version = "0.32.2", default-features = false, features = ["serde"] }
once_cell = "1.21.3"
