[package]
name = "api-state"
version = "0.1.0"
edition = "2024"

[dependencies]
game-interface = { path = "../game-interface" }

api = { path = "../../lib/api" }
api-wasm-macros = { path = "../../lib/api-wasm-macros" }
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
game-database = { path = "../../lib/game-database" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }

once_cell = "1.21.3"
