[package]
name = "assets-base"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
hiarc = { path = "../../lib/hiarc", features = ["derive", "enable_chrono", "enable_serde_json"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
anyhow = { version = "1.0.99", features = ["backtrace"] }
tar = "0.4.44"
rustc-hash = "2.1.1"
symphonia = { version = "0.5.4", default-features = false, features = ["ogg", "vorbis"] }
