[package]
name = "assets-base"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
hiarc = { path = "../../lib/hiarc", features = [
  "derive",
  "enable_chrono",
  "enable_serde_json",
] }

anyhow = { version = "1.0.100", features = ["backtrace"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
symphonia = { version = "0.5.5", default-features = false, features = [
  "ogg",
  "vorbis",
] }
tar = "0.4.44"
