[package]
name = "binds"
version = "0.1.0"
edition = "2024"

[dependencies]
client-types = { path = "../client-types" }
game-interface = { path = "../game-interface" }

command-parser = { path = "../../lib/command-parser" }
hiarc = { path = "../../lib/hiarc" }
input-binds = { path = "../../lib/input-binds" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
log = "0.4.28"
serde_json = "1.0.145"
