[package]
name = "client-containers"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
base-io-traits = { path = "../../lib/base-io-traits" }
base-io = { path = "../../lib/base-io" }
graphics-types = { path = "../../lib/graphics-types" }
graphics = { path = "../../lib/graphics" }
sound = { path = "../../lib/sound" }
image-utils = { path = "../../lib/image-utils" }
hiarc = { path = "../../lib/hiarc", features = ["derive", "enable_rayon", "enable_rustc_hash", "enable_url", "enable_fixed", "enable_either"] }
math = { path = "../../lib/math" }

assets-splitting = { path = "../assets-splitting" }
game-interface = { path = "../game-interface" }
assets-base = { path = "../assets-base" }

arrayvec = "0.7.6"
fixed = "1.29.0"
anyhow = { version = "1.0.98", features = ["backtrace"] }
rayon = "1.10.0"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = ["serde", "serde_impl"] }
num-traits = "0.2.19"
url = "2.5.4"
tokio = { version = "1.45.0", default-features = false, features = ["sync"] }
serde_json = "1.0.140"
log = "0.4.27"
either = "1.15.0"
rustc-hash = "2.1.1"
