[package]
name = "client-containers"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = [
  "derive",
  "enable_rayon",
  "enable_rustc_hash",
  "enable_url",
  "enable_fixed",
  "enable_either",
] }
image-utils = { path = "../../lib/image-utils" }
math = { path = "../../lib/math" }
sound = { path = "../../lib/sound" }

assets-base = { path = "../assets-base" }
assets-splitting = { path = "../assets-splitting" }
game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
arrayvec = "0.7.6"
either = "1.15.0"
fixed = "1.29.0"
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = [
  "serde",
  "serde_impl",
] }
log = "0.4.28"
num-traits = "0.2.19"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde_json = "1.0.145"
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }
url = "2.5.7"
