[package]
name = "client-demo"
version = "0.1.0"
edition = "2024"

[features]
ffmpeg = ["av-encoder/ffmpeg"]

[dependencies]
av-encoder = { path = "../../lib/av-encoder" }
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
bin-patch = { path = "../../lib/bin-patch" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
graphics-types = { path = "../../lib/graphics-types" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
sound-backend = { path = "../../lib/sound-backend" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }

client-map = { path = "../client-map" }
client-render-base = { path = "../client-render-base" }
client-render-game = { path = "../client-render-game" }
client-ui = { path = "../client-ui" }
demo = { path = "../demo", features = ["recorder"] }
game-base = { path = "../game-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
egui = { version = "0.32.3", default-features = false, features = ["serde"] }
log = "0.4.28"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }
