[package]
name = "client-ghost"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
sound-backend = { path = "../../lib/sound-backend" }
ui-base = { path = "../../lib/ui-base" }

client-demo = { path = "../client-demo", default-features = false }
client-render-game = { path = "../client-render-game" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }

log = "0.4.28"
rayon = "1.11.0"
