[package]
name = "client-map"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
config = { path = "../../lib/config" }
game-database = { path = "../../lib/game-database" }
graphics = { path = "../../lib/graphics" }
graphics-backend = { path = "../../lib/graphics-backend" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }

client-render-base = { path = "../client-render-base" }
client-render-game = { path = "../client-render-game" }
game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }
game-state-wasm = { path = "../game-state-wasm" }
map = { path = "../map" }
render-game-wasm = { path = "../render-game-wasm" }

anyhow = { version = "1.0.99", features = ["backtrace"] }
log = "0.4.28"
rayon = "1.11.0"
tracing = { version = "0.1.40", default-features = false, features = [
  "attributes",
] }
wasmparser = "0.238.1"
