[package]
name = "client-notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../../lib/base" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
graphics = { path = "../../lib/graphics" }

egui = { version = "0.32.2", default-features = false, features = ["serde"] }
egui-notify = "0.20.0"
