[package]
name = "client-notifications"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
graphics = { path = "../../lib/graphics" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }

egui = { version = "0.32.3", default-features = false, features = ["serde"] }
egui-notify = "0.20.0"
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }
