[package]
name = "client-render-base"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-backend-traits = { path = "../../lib/graphics-backend-traits" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
image-utils = { path = "../../lib/image-utils" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }

assets-base = { path = "../assets-base" }
camera = { path = "../camera" }
client-containers = { path = "../client-containers" }
game-base = { path = "../game-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
legacy-map = { path = "../legacy-map" }
map = { path = "../map" }
vanilla = { path = "../vanilla" }

hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = [
  "serde",
  "serde_impl",
] }

anyhow = { version = "1.0.100", features = ["backtrace"] }
bincode = { version = "2.0.1", features = ["serde"] }
fixed = "1.29.0"
futures = "0.3.31"
log = "0.4.28"
num-derive = "0.4.2"
num-traits = "0.2.19"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
