[package]
name = "client-render-game"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
config = { path = "../../lib/config" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
math = { path = "../../lib/math" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
ui-base = { path = "../../lib/ui-base" }

camera = { path = "../camera" }
client-containers = { path = "../client-containers" }
client-render = { path = "../client-render" }
client-render-base = { path = "../client-render-base" }
client-types = { path = "../client-types" }
client-ui = { path = "../client-ui" }
game-base = { path = "../game-base" }
game-config = { path = "../game-config" }
game-interface = { path = "../game-interface" }
map = { path = "../map" }
vanilla = { path = "../vanilla" }

egui = { version = "0.32.3", default-features = false, features = ["serde"] }
num-traits = "0.2.19"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.7", features = ["serde"] }
