[package]
name = "client-render"
version = "0.1.0"
edition = "2024"

[dependencies]
base = { path = "../../lib/base" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
math = { path = "../../lib/math" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }

client-containers = { path = "../client-containers" }
client-render-base = { path = "../client-render-base" }
client-types = { path = "../client-types" }
client-ui = { path = "../client-ui" }
game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }

egui = { version = "0.32.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
