[package]
name = "client-replay"
version = "0.1.0"
edition = "2024"

[dependencies]
base-io = { path = "../../lib/base-io" }

client-demo = { path = "../client-demo", default-features = false }
demo = { path = "../demo", features = ["recorder"] }
game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.99", features = ["backtrace"] }
egui = { version = "0.32.2", default-features = false, features = ["serde"] }
rayon = "1.11.0"
