[package]
name = "client-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
demo = { path = "../demo" }
client-types = { path = "../client-types" }
client-containers = { path = "../client-containers" }
client-render-base = { path = "../client-render-base" }
master-server-types = { path = "../master-server-types" }
game-base = { path = "../game-base" }
vanilla = { path = "../vanilla" }
game-interface = { path = "../game-interface" }
game-config = { path = "../game-config" }

binds = { path = "../binds", optional = true }

base = { path = "../../lib/base" }
base-io = { path = "../../lib/base-io" }
base-io-traits = { path = "../../lib/base-io-traits" }
config = { path = "../../lib/config" }
ui-base = { path = "../../lib/ui-base" }
ui-generic = { path = "../../lib/ui-generic" }
math = { path = "../../lib/math" }
image-utils = { path = "../../lib/image-utils" }
pool = { path = "../../lib/pool" }
sound = { path = "../../lib/sound" }
graphics = { path = "../../lib/graphics" }
graphics-types = { path = "../../lib/graphics-types" }
hiarc = { path = "../../lib/hiarc", features = ["derive"] }
command-parser = { path = "../../lib/command-parser" }

egui = { version = "0.32.2", default-features = false, features = ["serde"] }
egui_extras = { version = "0.32.2" }
fuzzy-matcher = "0.3.7"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }
hashlink = { git = "https://github.com/Jupeyy/hashlink/", branch = "ddnet", features = ["serde", "serde_impl"] }
rayon = "1.11.0"
log = "0.4.28"
egui_commonmark = "0.21.1"
anyhow = { version = "1.0.99", features = ["backtrace"] }
async-trait = "0.1.89"
email_address = { version = "0.2.9", features = ["serde"] }
url = { version = "2.5.7", features = ["serde"] }
urlencoding = "2.1.3"
gcd = "2.3.0"
num-rational = "0.4.2"
num-traits = "0.2.19"
serde_with = "3.14.0"
geo = "0.31.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["serde", "clock"] }

[features]
binds = ["dep:binds"]
