[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[features]
recorder = ["chrono", "tempfile", "base-io"]

[dependencies]
base = { path = "../../lib/base" }
bin-patch = { path = "../../lib/bin-patch" }

game-base = { path = "../game-base" }
game-interface = { path = "../game-interface" }

anyhow = { version = "1.0.100", features = ["backtrace"] }
bincode = { features = ["serde"], version = "2.0.1" }
itertools = "0.14.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
zstd = { version = "0.13", default-features = false, features = [
  "experimental",
  "zdict_builder",
] }

# feature related
base-io = { path = "../../lib/base-io", optional = true }

chrono = { version = "0.4.42", features = ["serde"], optional = true }
tempfile = { version = "3.23.0", optional = true }
