[package]
name = "editor-auto-mapper-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
editor-interface = { path = "../editor-interface" }

api-wasm-macros = { path = "../../lib/api-wasm-macros" }
base-io-traits = { path = "../../lib/base-io-traits" }
cache = { path = "../../lib/cache" }
wasm-runtime = { path = "../../lib/wasm-runtime" }

anyhow = { version = "1.0.99", features = ["backtrace"] }
wasmer = { version = "6.1.0-rc.3", default-features = false, features = [
  "sys",
  "cranelift",
] }
